k8s/bluesky-pds/manifests/pds-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pds-http-route
  namespace: bluesky-pds
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
    - name: envoy-gw
      sectionName: https
      namespace: default
  hostnames:
    - pds.tale.me
  rules:
    - backendRefs:
        - name: bluesky-pds
          port: 3000
